# test-gtest

./: CMakeLists.txt
lib/checkout/: CMakeLists.txt
lib/checkout/include/: checkout.h  exceptions.h  library.h
lib/checkout/src/: checkout.cpp  library.cpp
lib/checkout/tests/: checkout_test.cpp  main.cpp
